Revert "GRAD2-3283 - Apply client authentication to GRAD-TRAX-API"
This reverts commit 6cdbb4508891c9873597713041efe2f39d1d05f2.